--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -9,6 +9,8 @@
     <Canvas x:Name="CanvasField">
         <DockPanel >
             <TextBox KeyDown="TextBox_KeyDown"  />
+            <Button x:Name="button" Width="Auto"/>
         </DockPanel>
+        <Button x:Name="Button1" Content="Button" Canvas.Left="545" Canvas.Top="10" Click="button1_Click"/>
     </Canvas>
 </Window>
