All basic function added; Bloxx swinging Hook position animation Colision detecting Procent of bloxx touching boxx scroll and stuff

--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -11,5 +11,6 @@
             <Button x:Name="button" Width="Auto"/>
         </DockPanel>
         <Button x:Name="Button1" Content="Button" Canvas.Left="545" Canvas.Top="10" Click="button1_Click"/>
+        <Label x:Name="label" Content="Label" Canvas.Left="674" Canvas.Top="312" Width="104"/>
     </Canvas>
 </Window>
